<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:orientation="vertical"
    tools:context=".FormSewa">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/form"
                android:textColor="@color/cardview_dark_background"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/que1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/no1"
                android:textColor="@color/hitam"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/soal1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:text="@string/option1" />

                <RadioButton
                    android:id="@+id/option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:text="@string/option2" />

                <RadioButton
                    android:id="@+id/option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:text="@string/option3" />

                <RadioButton
                    android:id="@+id/option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:text="@string/option4" />
            </RadioGroup>

            <TextView
                android:id="@+id/que2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/no2"
                android:textColor="@color/hitam"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fromdate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight=".5" />

            <TextView
                android:id="@+id/que3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/no3"
                android:textColor="@color/hitam"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/todate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight=".5" />

            <TextView
            android:id="@+id/que4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/no4"
            android:textColor="@color/hitam"
            android:textSize="15sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:id="@+id/que5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/no5"
                android:textColor="@color/hitam"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/soal2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/cara1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:text="@string/cara1" />

                <RadioButton
                    android:id="@+id/cara2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:text="@string/cara2" />

                <RadioButton
                    android:id="@+id/cara3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:text="@string/cara3" />
            </RadioGroup>

            <Button
                android:id="@+id/kirim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pass"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/blue"
                android:text="Kirim"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>