<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="40dp"
        android:background="@color/white"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/registrasi"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/user_profile_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_baseline_account_circle_24"
            android:elevation="4dp" />

        <TextView
            android:id="@+id/sebagai"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_profile_photo"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/sebagai"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/parmusik"
            android:layout_width="110dp"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sebagai"
            android:layout_marginTop="10dp"
            android:background="@color/blue"
            android:text="@string/parmusik"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/customer"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sebagai"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue"
            android:text="@string/customer"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/akun"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customer"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/akun"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/login1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/akun"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:onClick="login1"
            android:text="@string/login1"
            android:textColor="#122CD4"
            android:textSize="18sp" />

    </RelativeLayout>

</RelativeLayout>